--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <li class="item" id="item-13">13</li>
         <li class="item" id="item-14">14</li>
         <li class="item" id="item-15">15</li>
+        <li class="item" id="item-16">16</li>
       </ul>
       <img>
-
+      <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fstatic.independent.co.uk%2Fs3fs-public%2Fthumbnails%2Fimage%2F2014%2F01%2F14%2F12%2Fmonkey-bananav3.jpg&f=1&nofb=1" id="banana-monkey">
     </div>
     <script src="./main.js"></script>
-  </body>
 </html>
